--- a/index.html
+++ b/index.html
@@ -9620,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200225170800384" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200225173357828" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -14288,7 +14288,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 תשובה ראשונה בסיסית היא: &quot;אני אחשוב על זה&quot;. משפט שבתקופה של שיפוץ הדירה, הפך למטבע לשון אצלנו.</pre>
 </div>
-<div created="20191031173942851" modified="20191101110724334" tags="[[כאן בגטו]] [[מטא בדיון]] [[אחיות חוץ]] בתים" title="ככל הנראה">
+<div created="20191031173942851" modified="20200225172723408" tags="[[כאן בגטו]] [[מטא בדיון]] [[אחיות חוץ]] בתים" title="ככל הנראה">
 <pre>[img[pictures/kechol-hanire.jpg]]
 
 !!![[אימא של ג'אז]]:
@@ -14542,14 +14542,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180508163939540" modified="20200212144112133" tags="[[אירי טוענת]] [[אחיות חוץ]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="כתב התנועה אשכול-וכמן">
+<div created="20180508163939540" modified="20200225173036869" tags="[[אירי טוענת]] [[אחיות חוץ]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="כתב התנועה אשכול-וכמן">
 <pre>[img[pictures/ctav-tnua.jpg]]
 
 !!![[אירי]]:
 
 [[זו|http://www.habama.co.il/Upload/MediaFiles/%D7%A0%D7%A2%D7%94%20%D7%90%D7%A9%D7%9B%D7%95%D7%9C%20%D7%91%D7%99%D7%92.bmp]] התמונה ממנה גורה ציירה את הציור, בו רואים את להקת &quot;ריקודי חדר&quot; של  [[נעה אשכול|https://he.wikipedia.org/wiki/%D7%A0%D7%95%D7%A2%D7%94_%D7%90%D7%A9%D7%9B%D7%95%D7%9C]], שהייתה למעשה אומנית חוקרת תנועה, ויצרה עם תלמידה [[אברהם וכמן|https://he.wikipedia.org/wiki/%D7%90%D7%91%D7%A8%D7%94%D7%9D_%D7%95%D7%9B%D7%9E%D7%9F]] את [[כתב התנועה אשכול- וכמן|https://he.wikipedia.org/wiki/%D7%9B%D7%AA%D7%91_%D7%94%D7%AA%D7%A0%D7%95%D7%A2%D7%94_%D7%90%D7%A9%D7%9B%D7%95%D7%9C-%D7%95%D7%9B%D7%9E%D7%9F]]. את  האטיודים שנובעים מהכתב מבצעים גם היום לקול מטרונום [[חברי הלהקה|https://www.youtube.com/watch?v=-C1tJdlXRRg]], שעבדו עימה לאורך שנים ארוכות בביתה בחולון, שם גם יצרה משאריות בדים [[שטיחי קיר|http://www.hetzroni.com/noa-rugs/noa_rugs.php]] מלאי כיוונים. הבית הלהקה והכתב [[ממשיכים|http://noaeshkol.org/]] ואני מעריצה את [[רחלי נול כהנא|http://info.smkb.ac.il/home/home.exe/45079/65721]]
 
-</pre>
+
+
+&lt;&lt;englink [[Eshkol-Wachman movement notation]]&gt;&gt;</pre>
 </div>
 <div created="20181004083402083" modified="20181004091908320" tags="[[האחיות בלות]]" title="לא חברמניות">
 <pre>[img[pictures/lo-hevremaniyot.jpg]]
@@ -15732,13 +15734,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Matza ball soup]]&gt;&gt;</pre>
 </div>
-<div created="20180603160754396" modified="20190310195704157" tags="סדרות [[אחיות חוץ]] חבר טלוויזיה" title="משחקי הכס">
+<div created="20180603160754396" modified="20200225173423709" tags="סדרות [[אחיות חוץ]] חבר טלוויזיה" title="משחקי הכס">
 <pre>[img[pictures/game-of-thrones.jpg]]
 
 !!![[יויו]]:
 
 [[חבר]] זה מישהו שאתה אוהב אותו, למשל [[טיריון לאניסטר|https://www.imdb.com/name/nm0227759/?ref_=tt_cl_t1]], שלא רק שהרג את אימו מעצם הוולדו, אף נולד גמד - חריג בעליל, משהו שדעת משפחתו אינה סובלת.  [[ג'יימי לאניסטר|https://www.imdb.com/name/nm0182666/?ref_=tt_cl_t7]] מתישהו כבר יודע שהוא טוב. הם כולם רוצחים במשחקי הכס, כך שזה אינו אומדן. אבל אם אתה כבר רוצח אז תעשה את זה עם סגנון כמו [[ליידי בריאן מטארת'|https://www.imdb.com/name/nm3729225/?ref_=tt_cl_t13]] או [[אריה סטארק|https://www.imdb.com/name/nm3586035/?ref_=tt_cl_t6]] שהן גם חברות טובות. אם הייתי נאלץ לבחור רק שלוש כפי שהיטלתי על עצמי, כי הרשימה ארוכה וקשה לא לציין את [[סאמוול טארלי|https://www.imdb.com/name/nm4263213/?ref_=tt_cl_t10]], [[את הכלב|https://www.imdb.com/name/nm0564920/?ref_=tt_cl_t18]], את [[ברון|https://www.imdb.com/name/nm0283492/?ref_=ttfc_fc_cl_t16]], [[את הודור|https://www.imdb.com/name/nm3964231/?ref_=ttfc_fc_cl_t32]],  ואעצור כאן כי לא עומד בזה [[סידרה אהובה|https://www.imdb.com/title/tt0944947/]] [[ושחקנים אהובים|https://www.imdb.com/title/tt0944947/fullcredits?ref_=tt_cl_sm#cast]], שמבוססת על הספרים שכתב [[האיש הזה|https://www.youtube.com/watch?v=5YxeHFU8SKE]].
-</pre>
+
+
+&lt;&lt;englink [[Game of Thrones]]&gt;&gt;</pre>
 </div>
 <div created="20170802165524913" modified="20200213180506855" tags="[[נאמני הגנזך]] בתים [[בדרך לאן שהוא]]" title="משנים">
 <pre>[img[pictures/meshanim.jpg]]
