--- a/index.html
+++ b/index.html
@@ -9620,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200225173357828" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200225173804123" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -16944,12 +16944,17 @@ May the lord bless your soul, I love you girl
 
 &lt;&lt;englink [[Eva`s family tree]]&gt;&gt;</pre>
 </div>
-<div created="20170603193440578" modified="20170604134857056" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פ.מ.אלכסנדר">
+<div created="20170603193440578" modified="20200225173940238" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פ.מ.אלכסנדר">
 <pre>[img[pictures/f-m-alexander.jpg]]
 
 !!![[אירי]]:
 
-כשחקן צעיר נטה [[אלכסנדר|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%93%D7%A8%D7%99%D7%A7_%D7%9E%D7%AA%D7%99%D7%90%D7%A1_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]] להצטרד בזמן שהופיע. הוא החל לחקור את התופעה, וכך פיתח את [[השיטה|שיטת אלכסנדר]].</pre>
+כשחקן צעיר נטה [[אלכסנדר|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%93%D7%A8%D7%99%D7%A7_%D7%9E%D7%AA%D7%99%D7%90%D7%A1_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]] להצטרד בזמן שהופיע. הוא החל לחקור את התופעה, וכך פיתח את [[השיטה|שיטת אלכסנדר]].
+
+
+&lt;&lt;englink [[F.M.Alexander]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20170415150652294" modified="20190314145344444" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="פאי אגסים עם קרם גבינה ושקדים">
 <pre>[img[pictures/pie-agasim.jpg]]
