--- a/english.html
+++ b/english.html
@@ -385,6 +385,8 @@ Error message and password prompt
 
 <li>Exile</li>
 
+<li>F.M.Alexander</li>
+
 <li>Fa</li>
 
 <li>Fargo</li>
@@ -8660,7 +8662,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Game of Thrones]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="F.M.Alexander [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9322,8 +9324,7 @@ My admired [[screenwriter and director|https://en.wikipedia.org/wiki/Charlie_Kau
 . </pre>
 </div>
 <div created="20200225170224847" modified="20200225170400497" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Chava Alberstein">
-<pre>
-[img[pictures/chava-alberstein.jpg]]
+<pre>[img[pictures/chava-alberstein.jpg]]
 
 
 
@@ -9671,8 +9672,7 @@ Sherlock, in the Jonny Lee Miller version, watches seven screens at the same tim
  &lt;&lt;heblink [[אלמנטרי]]&gt;&gt;</pre>
 </div>
 <div created="20200225172821947" modified="20200225172940798" tags="[[Iry claims]] [[Outer sisters]] [[How many songs can you even invent at all]]" title="Eshkol-Wachman movement notation">
-<pre>
-[img[pictures/ctav-tnua.jpg]]
+<pre>[img[pictures/ctav-tnua.jpg]]
 
 
 
@@ -9749,6 +9749,15 @@ I want to think that David Bowie returned to his star peacefully, and by that ac
 
 </pre>
 </div>
+<div created="20200225173541221" modified="20200225173922751" tags="[[Outer sisters]] [[Iry claims]]" title="F.M.Alexander">
+<pre>[img[pictures/f-m-alexander.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[פ.מ.אלכסנדר]]&gt;&gt;
+</pre>
+</div>
 <div created="20200212172954331" modified="20200219191720020" tags="[[Coen sister]]" title="Fa">
 <pre>[img[pictures/fa.jpg]]
 
@@ -9795,7 +9804,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200225173251108" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200225173625782" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -9848,8 +9857,7 @@ Need a document? Need to send a fax? Need a business card? Need to scan? Need a 
 </pre>
 </div>
 <div created="20200225173153011" modified="20200225173320183" tags="[[Outer sisters]] TV [[TV Series]] [[A friend]]" title="Game of Thrones">
-<pre>
-[img[pictures/game-of-thrones.jpg]]
+<pre>[img[pictures/game-of-thrones.jpg]]
 
 
 
@@ -10093,7 +10101,6 @@ Here in the picture are Hanna my mother and I, few months before she passed away
 </div>
 <div created="20200225165007413" modified="20200225165121233" tags="[[Outer sisters]]" title="Haruki Murakami">
 <pre>
-
 [img[pictures/haruki-murakami.jpg]]
 
 
@@ -10387,8 +10394,7 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 </pre>
 </div>
 <div created="20200223190516303" modified="20200223190831707" tags="[[Menopause sisters]] [[Outer sisters]] Films" title="Jane Fonda">
-<pre>
-[img[pictures/jane-fonda.jpg]]
+<pre>[img[pictures/jane-fonda.jpg]]
 
 
 
@@ -10859,8 +10865,7 @@ I watched T[[HE SCIENCE OF SLEEP|https://www.imdb.com/title/tt0354899/]] and fel
 </pre>
 </div>
 <div created="20200225164430104" modified="20200225164701988" tags="[[Outer sisters]] Films" title="Mike Leigh">
-<pre>
-[img[pictures/mike-leigh.jpg]]
+<pre>[img[pictures/mike-leigh.jpg]]
 
 
 
@@ -11995,8 +12000,7 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 </pre>
 </div>
 <div created="20200225165427271" modified="20200225165740497" tags="[[Outer sisters]] Music Metafiction" title="The real Dod">
-<pre>
-[img[pictures/hadod-haamiti.jpg]]
+<pre>[img[pictures/hadod-haamiti.jpg]]
 
 
 
@@ -12423,8 +12427,7 @@ Today on the street, this [[permanently|https://www.youtube.com/watch?v=lt_C-vcD
  &lt;&lt;heblink [[יהודית רביץ]]&gt;&gt;</pre>
 </div>
 <div created="20200225170618277" modified="20200225170733105" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Yoni Rechter">
-<pre>
-[img[pictures/yoni-rechter.jpg]]
+<pre>[img[pictures/yoni-rechter.jpg]]
 
 
 
