--- a/index.html
+++ b/index.html
@@ -9620,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200225173804123" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200225182828375" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -18384,21 +18384,30 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170416222531534" modified="20200212144538551" tags="[[אחיות חוץ]] חבר [[כמה שירים כבר אפשר להמציא בכלל]]" title="רן יגיל">
+<div created="20170416222531534" modified="20200225182302903" tags="[[אחיות חוץ]] חבר [[כמה שירים כבר אפשר להמציא בכלל]]" title="רן יגיל">
 <pre>[img[pictures/rani.jpg]]
 
 !!![[אימא של ג'אז]]:
 
-מהתמונה [[הזו|https://i.ytimg.com/vi/IPMJ1ptECSk/maxresdefault.jpg]] ניסתה גורה לצייר את [[רן יגיל|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]], שהוא סופר, עורך, לשונאי, מוציא לאור, מבקר, איש [[עמדה|https://he.wikipedia.org/wiki/%D7%A2%D7%9E%D7%93%D7%94_(%D7%9B%D7%AA%D7%91_%D7%A2%D7%AA_%D7%A1%D7%A4%D7%A8%D7%95%D7%AA%D7%99)]] ואחות אהובה.</pre>
+מהתמונה [[הזו|https://i.ytimg.com/vi/IPMJ1ptECSk/maxresdefault.jpg]] ניסתה גורה לצייר את [[רן יגיל|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]], שהוא סופר, עורך, לשונאי, מוציא לאור, מבקר, איש [[עמדה|https://he.wikipedia.org/wiki/%D7%A2%D7%9E%D7%93%D7%94_(%D7%9B%D7%AA%D7%91_%D7%A2%D7%AA_%D7%A1%D7%A4%D7%A8%D7%95%D7%AA%D7%99)]] ואחות אהובה.
+
+
+&lt;&lt;englink [[Ran Yagil]]&gt;&gt;
+
+
+</pre>
 </div>
-<div created="20190215131236472" modified="20190215171107316" tags="[[אחיות חוץ]] [[סיפורים אמיתיים]] [[כאן בגטו]] [[אחות כהן]] [[מטא בדיון]]" title="רפי מינץ">
+<div created="20190215131236472" modified="20200225182556492" tags="[[אחיות חוץ]] [[סיפורים אמיתיים]] [[כאן בגטו]] [[אחות כהן]] [[מטא בדיון]]" title="רפי מינץ">
 <pre>[img[pictures/rafi-munz.jpg]]
 
 !!![[הצוות]]:
 
 [[רפי מינץ|https://www.rafim.com/new.htm]] הוא אחות ראשית מקורית, ולמעשה [[בראשית האחיות|המעבדה]] הוא מונה לראש השבט. הוא אומן נפלא ומקורי שמצייר, כותב, מסמל ומפסל.
 
-מהתמונה [[הזו|https://shulashek.net/rafim.com/new/invit_gansh.jpg]] ציירה גורה את הציור.</pre>
+מהתמונה [[הזו|https://shulashek.net/rafim.com/new/invit_gansh.jpg]] ציירה גורה את הציור.
+
+
+&lt;&lt;englink [[Rafi Műnz]]&gt;&gt;</pre>
 </div>
 <div created="20190122074755075" modified="20190219162745651" tags="[[סיפורים אמיתיים]]" title="רקפות">
 <pre>[img[pictures/rakafot.jpg]]
@@ -18752,7 +18761,7 @@ Fapina''
 הוא טוב מראה, טוב לב, חביב על הבריות, חסר חוש עסקי, בעל חוש אומנותי ואף יוצר בעצמו, חובב נשים (אך לא רודף שמלות).
 שלום גר בקומה חמש בבניין, ובקומה מעליו הוא חולק סטודיו עם מסאז'יסטית ואומנית נוספת.</pre>
 </div>
-<div created="20180325202247142" modified="20200212144554144" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="שלום חנוך">
+<div created="20180325202247142" modified="20200225182856472" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="שלום חנוך">
 <pre>[img[pictures/shalom-chanoch.jpg]]
 
 !!![[יויו]]:
@@ -18786,7 +18795,7 @@ Fapina''
 
 
 
-</pre>
+&lt;&lt;englink [[Shalom Hanoch]]&gt;&gt;</pre>
 </div>
 <div created="20161213222959588" modified="20170508145757745" title="שלח">
 <pre>[img[pictures/CT2ku66Mqk7cBavl.JPG]]
