--- a/english.html
+++ b/english.html
@@ -619,6 +619,10 @@ Error message and password prompt
 
 <li>Radio epgb</li>
 
+<li>Rafi Műnz</li>
+
+<li>Ran Yagil</li>
+
 <li>Raziel and Rafael</li>
 
 <li>Rear Window</li>
@@ -652,6 +656,8 @@ Error message and password prompt
 <li>Searching for Iry</li>
 
 <li>Semolina cake</li>
+
+<li>Shalom Hanoch</li>
 
 <li>Shoretzky</li>
 
@@ -8662,7 +8668,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="F.M.Alexander [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9804,7 +9810,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200225173625782" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200225182729195" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11333,6 +11339,22 @@ For example, I'm proud to say that I don't own a private car, but instead I do p
 
 &lt;&lt;heblink [[רדיו epgb]]&gt;&gt;</pre>
 </div>
+<div created="20200225182339743" modified="20200225182453806" tags="[[Outer sisters]] [[Here in the Ghetto]]" title="Rafi Műnz">
+<pre>
+[img[pictures/rafi-munz.jpg]]
+
+
+
+ &lt;&lt;heblink [[רפי מינץ]]&gt;&gt;</pre>
+</div>
+<div created="20200225182024426" modified="20200225182208299" tags="[[Outer sisters]] [[A friend]] [[How many songs can you even invent at all]]" title="Ran Yagil">
+<pre>
+[img[pictures/rani.jpg]]
+
+
+ &lt;&lt;heblink [[רן יגיל]]&gt;&gt;
+</pre>
+</div>
 <div created="20200217174006071" modified="20200217174552629" tags="[[The estate]] Houses" title="Raziel and Rafael">
 <pre>[img[pictures/refaelveraziel.jpg]]
 
@@ -11518,6 +11540,14 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 
 
 
+</pre>
+</div>
+<div created="20200225182640202" modified="20200225182754249" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Shalom Hanoch">
+<pre>
+[img[pictures/shalom-chanoch.jpg]]
+
+
+ &lt;&lt;heblink [[שלום חנוך]]&gt;&gt;
 </pre>
 </div>
 <div created="20200217142305955" modified="20200219150409219" tags="[[Here in the Ghetto]] [[Food addicts]]" title="Shoretzky">
