--- a/english.html
+++ b/english.html
@@ -317,6 +317,8 @@ Error message and password prompt
 
 <li>Cauliflower in a frying Pan</li>
 
+<li>Chan</li>
+
 <li>Changing</li>
 
 <li>Charlie Kaufman</li>
@@ -487,6 +489,8 @@ Error message and password prompt
 
 <li>John Irving</li>
 
+<li>Jong</li>
+
 <li>Jozef Abaroa</li>
 
 <li>Karl Ove Knausgard</li>
@@ -548,6 +552,8 @@ Error message and password prompt
 <li>Michel Gondry</li>
 
 <li>Mike Leigh</li>
+
+<li>Mimi of Alfred</li>
 
 <li>Misenplation</li>
 
@@ -616,6 +622,8 @@ Error message and password prompt
 <li>Puaa</li>
 
 <li>Public Transportation</li>
+
+<li>Queng</li>
 
 <li>Radio epgb</li>
 
@@ -798,6 +806,8 @@ Error message and password prompt
 <li>With Yoyo in Amsterdam</li>
 
 <li>Wyclef Jean</li>
+
+<li>Ya</li>
 
 <li>Yehonatan Geffen</li>
 
@@ -8668,7 +8678,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Queng [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9306,6 +9316,14 @@ add quarter cup of olive oil and three sliced garlic cloves
  &lt;&lt;heblink [[כרובית במחבת]]&gt;&gt;
 </pre>
 </div>
+<div created="20200225184705256" modified="20200225184807868" tags="[[Coen sister]]" title="Chan">
+<pre>
+[img[pictures/chan.jpg]]
+
+
+ &lt;&lt;heblink [[צ'ן]]&gt;&gt;
+</pre>
+</div>
 <div created="20200213180145409" modified="20200216175720420" tags="Houses [[On the road to somewhere]] [[The archive's trustees]]" title="Changing">
 <pre>[img[pictures/meshanim.jpg]]
 
@@ -9810,7 +9828,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200225182729195" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200225185101857" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10476,6 +10494,14 @@ If you say [[John Goodman|https://www.imdb.com/name/nm0000422/]], even when I'm 
  &lt;&lt;heblink [[ג'ון אירווינג]]&gt;&gt;
 </pre>
 </div>
+<div created="20200225183131810" modified="20200225183352679" tags="[[Coen sister]]" title="Jong">
+<pre>
+[img[pictures/jong.jpg]]
+
+
+
+ &lt;&lt;heblink [[ג'ונג]]&gt;&gt;</pre>
+</div>
 <div created="20200215135425861" modified="20200215135806057" tags="[[Coen sister]]" title="Jozef Abaroa">
 <pre>[img[pictures/jozef.jpg]]
 
@@ -10876,6 +10902,16 @@ I watched T[[HE SCIENCE OF SLEEP|https://www.imdb.com/title/tt0354899/]] and fel
 
 
  &lt;&lt;heblink [[מייק לי]]&gt;&gt;
+</pre>
+</div>
+<div created="20200225184220574" modified="20200225184537659" tags="[[Outer sisters]] Films [[Dreams that we've dreamt]] [[True stories]]" title="Mimi of Alfred">
+<pre>
+[img[pictures/mimi-shel-alfred.jpg]]
+
+
+
+ &lt;&lt;heblink [[מימי של אלפרד]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200217134428443" modified="20200219133440077" tags="Kitchens [[Monkeys with car keys]] Laundry [[The kitchen by Genevieve]]" title="Misenplation">
@@ -11330,6 +11366,18 @@ For example, I'm proud to say that I don't own a private car, but instead I do p
 
 </pre>
 </div>
+<div created="20200225185018375" modified="20200225185129562" tags="[[Outer sisters]]" title="Queng">
+<pre>
+[img[pictures/queng.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[קואנג]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20190226093702127" modified="20191113120521333" tags="[[Here in the Ghetto]] Music Metafiction" title="Radio epgb">
 <pre>[img[pictures/radio-epgb.jpg]]
 
@@ -11339,7 +11387,7 @@ For example, I'm proud to say that I don't own a private car, but instead I do p
 
 &lt;&lt;heblink [[רדיו epgb]]&gt;&gt;</pre>
 </div>
-<div created="20200225182339743" modified="20200225182453806" tags="[[Outer sisters]] [[Here in the Ghetto]]" title="Rafi Műnz">
+<div created="20200225182339743" modified="20200225183940524" tags="[[Outer sisters]] [[Here in the Ghetto]] [[Coen sister]] Metafiction [[True stories]]" title="Rafi Műnz">
 <pre>
 [img[pictures/rafi-munz.jpg]]
 
@@ -12435,6 +12483,13 @@ I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he
 
 
 </pre>
+</div>
+<div created="20200225183706640" modified="20200225183805172" tags="[[Coen sister]]" title="Ya">
+<pre>
+[img[pictures/ya.jpg]]
+
+
+ &lt;&lt;heblink [[יה]]&gt;&gt;</pre>
 </div>
 <div created="20200217131804519" modified="20200217132253478" tags="Music [[Outer sisters]] [[How many songs can you even invent at all]]" title="Yehonatan Geffen">
 <pre>[img[pictures/yonatan-gefen.jpg]]
