--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אחיות חוץ]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אחות כהן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200223194720478" title="$:/temp/search">
+<div created="20161023184814872" modified="20200225183004290" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9620,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200225182828375" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200225185255973" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10979,7 +10979,7 @@ Is where I want to be
 
 &lt;&lt;englink [[John Goodman]]&gt;&gt;</pre>
 </div>
-<div created="20170323221312884" modified="20170703134352456" tags="[[אחות כהן]]" title="ג'ונג">
+<div created="20170323221312884" modified="20200225183416946" tags="[[אחות כהן]]" title="ג'ונג">
 <pre>[img[pictures/jong.jpg]]
 
 !!![[גורה]]:
@@ -10994,6 +10994,10 @@ Is where I want to be
 מבחינתו גם כשהוא במטרו הוא לבד.
 
 
+
+
+
+&lt;&lt;englink [[Jong]]&gt;&gt;
 
 
 
@@ -13462,7 +13466,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170702183413439" modified="20170702205221449" tags="[[אחות כהן]]" title="יה">
+<div created="20170702183413439" modified="20200225183902602" tags="[[אחות כהן]]" title="יה">
 <pre>[img[pictures/ya.jpg]]
 
 !!![[גורה]]:
@@ -13471,7 +13475,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא עושה תואר שני במדעי החיים אבל בשילוב עם מדעי הנפש, ועובדת בספריה של האוניברסיטה, וגם כמתרגלת במעבדה.
 
-התחברנו ממש, והיא אחות.</pre>
+התחברנו ממש, והיא אחות.
+
+
+&lt;&lt;englink [[Ya]]&gt;&gt;</pre>
 </div>
 <div created="20190124084102212" modified="20200220160544409" tags="[[אחיות חוץ]] מוזיקה [[כאן בגטו]] [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="יהודית רביץ">
 <pre>[img[pictures/yehudit-ravitz.jpg]]
@@ -15385,14 +15392,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Mike Leigh]]&gt;&gt;
 </pre>
 </div>
-<div created="20170728130049527" modified="20180815065501637" tags="[[חלומות שחלמנו]] [[אחות כהן]] [[סיפורים אמיתיים]] חבר" title="מימי של אלפרד">
+<div created="20170728130049527" modified="20200225184504689" tags="[[חלומות שחלמנו]] [[אחות כהן]] [[סיפורים אמיתיים]] חבר סרטים" title="מימי של אלפרד">
 <pre>[img[pictures/mimi-shel-alfred.jpg]]
 
 !!![[יויו]]:
 
 מימי של [[אלפרד]] היא one man show. הם היו נשואים כמה שנים כשהיו באמצע שנות העשרים שלהם. לפני חודש בערך היא הגיעה איתו [[לדירה|כוכב המשאלות 01]]. היא באה לצלם איזה אנרכיסט ספרדי שחי כעת בפריז. היא נוסעת בוואן סגור שיש בו מיטה וציוד שהיא קימבנה, שמהווה סט אולפן. זה כולל מצלמה עליה יושבות עוד שתי מצלמות רגילות ואחת שהיא רחף. לכל מצלמה אפשר להוסיף גוף תאורה ומיקרופון ואם צריך אז גם טלפרומפטר.  לידיות שמניעות את הקונסטרוקציה הזו מחוברים שלטים, שאיתם היא מנתבת בזמן אמת את התמונה, כולל אפשרות לשילוב של וידאו ושליטה בסאונד. אכן כן. היא התחבבה מאד על כולנו והפכה [[לאחות|אחות כהן]].
 
-</pre>
+
+
+&lt;&lt;englink [[Mimi of Alfred]]&gt;&gt;</pre>
 </div>
 <div created="20170502201030702" modified="20170702001628119" tags="HH" title="מיצפרש">
 <pre>[img[pictures/mizperesh.jpg]]
@@ -17707,12 +17716,15 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170324140233570" modified="20170424214046263" tags="[[אחות כהן]]" title="צ'ן">
+<div created="20170324140233570" modified="20200225184858570" tags="[[אחות כהן]]" title="צ'ן">
 <pre>[img[pictures/chan.jpg]]
 
 !!![[גורה]]:
 
-לצ'ן יש אופי של חקלאי. הוא משקים קום, הוא אחראי על המשאית הקטנה של [[הסינים]], הוא חזק, חרוץ, ממושמע, נחמד ומצחיק טילים. </pre>
+לצ'ן יש אופי של חקלאי. הוא משקים קום, הוא אחראי על המשאית הקטנה של [[הסינים]], הוא חזק, חרוץ, ממושמע, נחמד ומצחיק טילים. 
+
+
+&lt;&lt;englink [[Chan]]&gt;&gt;</pre>
 </div>
 <div created="20170324140059460" modified="20200215211132703" tags="[[אחות כהן]]" title="צ'נג">
 <pre>[img[pictures/chang.jpg]]
@@ -17804,7 +17816,7 @@ Fapina''
 &lt;&lt;englink [[Roast beef with potatoes]]&gt;&gt;
 </pre>
 </div>
-<div created="20170323213155309" modified="20170704125840197" tags="[[אחות כהן]]" title="קואנג">
+<div created="20170323213155309" modified="20200225185325221" tags="[[אחות כהן]]" title="קואנג">
 <pre>[img[pictures/queng.jpg]]
 
 !!![[גורה]]:
@@ -17813,6 +17825,9 @@ Fapina''
 
 הוא למד עיצוב תעשייתי, ויש לו [[חלל עבודה|הסדנה של קואנג]] ברובע ה-13.
 הוא תמיד העדיף להתפרנס מהעבודה בשיפוצים עם [[חבריו|הסינים]], ובזמן האחרון אלפרד והוא [[משפצים ובונים רהיטים]] במלוא האון.
+
+
+&lt;&lt;englink [[Queng]]&gt;&gt;
 </pre>
 </div>
 <div created="20190422120310153" modified="20190424141120699" tags="[[למה הדבר דומה]] [[מתכונים טבעוניים]] [[חיות אוכל]]" title="קובה טבעוני">
