--- a/english.html
+++ b/english.html
@@ -367,6 +367,8 @@ Error message and password prompt
 
 <li>David Chase</li>
 
+<li>Delicatessen</li>
+
 <li>Delicatessen Chez Genevieve</li>
 
 <li>Dreams that we've dreamt</li>
@@ -410,6 +412,8 @@ Error message and password prompt
 <li>Genevieve</li>
 
 <li>Gigi</li>
+
+<li>Graziani</li>
 
 <li>Grey’s Anatomy</li>
 
@@ -8678,7 +8682,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Queng [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9660,6 +9664,15 @@ This is [[Sweet David Byrne|http://davidbyrne.com/]].
 
 </pre>
 </div>
+<div created="20200225190656305" modified="20200225190838834" tags="[[Here in the Ghetto]] Restaurants [[Coffee shops]] Kitchens" title="Delicatessen">
+<pre>
+[img[pictures/delicatessen-tel-aviv.jpg]]
+
+
+
+ &lt;&lt;heblink [[דליקטסן]]&gt;&gt;
+</pre>
+</div>
 <div created="20200215113637898" modified="20200219133116379" tags="Meals Coffee [[Coffee shops]] Restaurants [[The kitchen by Genevieve]]" title="Delicatessen Chez Genevieve">
 <pre>[img[pictures/delicatessen.jpg]]
 
@@ -9828,7 +9841,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200225185101857" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200225190815847" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -9951,6 +9964,15 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
 
 
 </pre>
+</div>
+<div created="20200225185730232" modified="20200225185911534" tags="[[Here in the Ghetto]] [[Coffee shops]] Coffee Baking" title="Graziani">
+<pre>
+[img[pictures/grasyani.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[גרציאני]]&gt;&gt;</pre>
 </div>
 <div created="20200220161521230" modified="20200220162527887" tags="TV [[TV Series]] Mothers" title="Grey’s Anatomy">
 <pre>[img[pictures/greys-anatomy.jpg]]
