--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אחות כהן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כאן בגטו]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200225183004290" title="$:/temp/search">
+<div created="20161023184814872" modified="20200225185505183" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9620,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200225185255973" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200225190931180" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11838,12 +11838,19 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20180715194223602" modified="20190617133250556" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה [[בתי קפה]]" title="גרציאני">
+<div created="20180715194223602" modified="20200225190010939" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה [[בתי קפה]]" title="גרציאני">
 <pre>[img[pictures/grasyani.jpg]]
 
 !!![[תומר]]:
 
-כשאני הולך נגד כוון השעון אני שותה את הקפה של הבוקר עם סנדביץ' קטן וטעים - למשל זה עם הנקטרינה והגבינה הלבנה בתוך לחם אגוזים - [[בגרציאני|https://easy.co.il/page/10008537]], שנמצא ביהודה הלוי מול [[הגינה|גינת קריית ספר]]. בשבת בבוקר אני לוקח גוז'רים טעימים ממש, או בורקיטס תרד, או קרואסון או לחמניות או משהו מאד טעים אחר. </pre>
+כשאני הולך נגד כוון השעון אני שותה את הקפה של הבוקר עם סנדביץ' קטן וטעים - למשל זה עם הנקטרינה והגבינה הלבנה בתוך לחם אגוזים - [[בגרציאני|https://easy.co.il/page/10008537]], שנמצא ביהודה הלוי מול [[הגינה|גינת קריית ספר]]. בשבת בבוקר אני לוקח גוז'רים טעימים ממש, או בורקיטס תרד, או קרואסון או לחמניות או משהו מאד טעים אחר. 
+
+
+
+
+&lt;&lt;englink [[Graziani]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20190307161740011" modified="20190307230829232" tags="מתכונים [[חיות אוכל]] [[מתכונים טבעוניים]]" title="דאל עדשים כתומות">
 <pre>[img[pictures/adashim-ketumot.jpg]]
@@ -11967,13 +11974,17 @@ different tastes, but there were things we both love: family, work, people in al
 
 &lt;&lt;englink [[RIP Dina]]&gt;&gt;</pre>
 </div>
-<div created="20181031153935874" modified="20190617133310112" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות קפה [[בתי קפה]] מטבחים" title="דליקטסן">
+<div created="20181031153935874" modified="20200225190959884" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות קפה [[בתי קפה]] מטבחים" title="דליקטסן">
 <pre>[img[pictures/delicatessen-tel-aviv.jpg]]
 
 
 !!![[תומר]]:
 
-[[יויו]] לעולם לא היה יורד לרמה הזאת של לראות תוכניות בערוץ מסחרי, אבל שידבר איתי כשיהפוך לאבא עייף שמתבטט מול המסך הקטן באזור תשע עשר מידי ערב, וכעת הוא צופה ב- MKR, והתוודע כמו כל צופי האפיק [[לרותי ברודו|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%AA%D7%99_%D7%95%D7%9E%D7%AA%D7%99_%D7%91%D7%A8%D7%95%D7%93%D7%95]] - השופטת הכריזמטית והכנה - שאוחזת בכמה מעוזי קולינריה איתנים - וכן - גם אני לפעמים וגם הבוקר פניתי שמאלה ליהודה הלוי ועצרתי  [[בדליקטסן|https://www.delitlv.co.il/]],  וקניתי קפה ומאפה ולחם לטוסטים והמשכתי לצעוד מבסוט [[לאלנבי|קפה וממתקים]].</pre>
+[[יויו]] לעולם לא היה יורד לרמה הזאת של לראות תוכניות בערוץ מסחרי, אבל שידבר איתי כשיהפוך לאבא עייף שמתבטט מול המסך הקטן באזור תשע עשר מידי ערב, וכעת הוא צופה ב- MKR, והתוודע כמו כל צופי האפיק [[לרותי ברודו|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%AA%D7%99_%D7%95%D7%9E%D7%AA%D7%99_%D7%91%D7%A8%D7%95%D7%93%D7%95]] - השופטת הכריזמטית והכנה - שאוחזת בכמה מעוזי קולינריה איתנים - וכן - גם אני לפעמים וגם הבוקר פניתי שמאלה ליהודה הלוי ועצרתי  [[בדליקטסן|https://www.delitlv.co.il/]],  וקניתי קפה ומאפה ולחם לטוסטים והמשכתי לצעוד מבסוט [[לאלנבי|קפה וממתקים]].
+
+
+
+&lt;&lt;englink [[Delicatessen]]&gt;&gt;</pre>
 </div>
 <div created="20171018115658510" modified="20200215113943524" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות קפה [[בתי קפה]]" title="דליקטסן אצל ז'נבייב">
 <pre>[img[pictures/delicatessen.jpg]]
