--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כאן בגטו]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כאן בגטו]] [[הארבעה 2]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9620,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200225190931180" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200225191819142" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12223,13 +12223,15 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20190623124800612" modified="20190624162718642" tags="[[כאן בגטו]]" title="הארבעה 2">
+<div created="20190623124800612" modified="20200225191917598" tags="[[כאן בגטו]]" title="הארבעה 2">
 <pre>[img[pictures/haarbaa2.jpg]]
 
 !!![[תומר]]:
 
-מה שכובש אותי בבנין הזה שנקרא הארבעה 2, זה השעון שנמצא בצדו הימני.
+מה שכובש אותי בבנין הזה שנקרא הארבעה 2, זה השעון שנמצא בצד הימני.
 
+
+&lt;&lt;englink [[HaAarba`a 2]]&gt;&gt;
 </pre>
 </div>
 <div created="20170918121843399" modified="20200213170643784" tags="[[אחיות חוץ]] סרטים" title="הארי דין סטנטון">
