--- a/english.html
+++ b/english.html
@@ -425,6 +425,8 @@ Error message and password prompt
 
 <li>Gura`s tale</li>
 
+<li>HaAarba`a 2</li>
+
 <li>HaAchim</li>
 
 <li>Hair up</li>
@@ -9841,7 +9843,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200225190815847" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200225191719073" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10055,6 +10057,16 @@ Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]]
 
 
 
+</pre>
+</div>
+<div created="20200225191512840" modified="20200225191856343" tags="[[Here in the Ghetto]] Houses" title="HaAarba`a 2">
+<pre>
+[img[pictures/haarbaa2.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[הארבעה 2]]&gt;&gt;
 </pre>
 </div>
 <div created="20200213153541799" modified="20200216172108169" tags="[[Here in the Ghetto]] [[Outer sisters]] [[Food addicts]] Meals Restaurants" title="HaAchim">
